syntax = "proto3";
option java_package = "io.grpc";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHello2 (stream HelloRequest) returns (HelloReply) {}
  rpc SayHello3 (HelloRequest) returns (stream HelloReply) {}
  rpc SayHello4(stream HelloRequest)returns (stream HelloReply){}
}

message HelloRequest {
  string name = 1;
  string sex = 2;
}

message HelloReply {
  string message = 1;
}